Changelog
=========

Nutils is under active development and the API is not frozen. Active
users are advised to keep an eye on this file to stay up to date with
the most prominent user-facing changes.


Changed: properties dumpdir, outdir, outrootdir

  Two global properties have been renamed as follows:
  - dumpdir -> outdir
  - outdir -> outrootdir

  The outrootdir defaults to ~/public_html and can be redefined from the
  command line or in the .nutilsrc configuration file. The outdir
  defaults to the current directory and is redefined by util.run,
  nesting the name/date/time subdirectory sequence under outrootdir.
  For manual acces, the new convenience function `core.getoutdir`
  handles directory creation and returns the path.


Changed: sum axes argument

  The behaviour of function.sum and ArrayFunc.sum is inconsistent with
  that of the numpy counterparts. In case no axes argument is specified,
  numpy sums over all axes, whereas nutils sums over the last axis. To
  undo this mistake and transition to numpy's behaviour, calling sum
  without an axes argument is deprecated and will be forbidden in nutils
  3.0. In nutils 4.0 it will be reintroduced with the corrected meaning.

  Old syntax:
  >> A.sum()
  >> function.sum( A )

  New syntax:
  >> A.sum( -1 )
  >> function.sum( A, -1 )


Changed: strict dimension equality in function.outer

  Function.outer allows arguments of different dimension by left-padding
  the smallest prior to multiplication. There is no clear reason for
  this generality and it hinders error checking. Therefore in future in
  function.outer( a, b ), a.ndim must equal b.ndim.

  In a brief transition period non-equality emits a warning.


Reverted: log iterators

  Manually setting the __log__ property is removed and the old notation
  is reintroduced. The change is backwards incompatible, in a way that
  an warning is issued and output is written to a fallback stream in